--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,32 @@
-  version: '3.8'
-  services:
-    postgres:
-      image: postgres:latest
-      restart: always
-      environment:
-        POSTGRES_USER: postgres
-        POSTGRES_PASSWORD: postgres
-        POSTGRES_DB: postgres
-      ports:
-        - '5432:5432'
-      volumes:
-        - postgres-data:/var/lib/postgresql/data
+version: '3.8'
+services:
+  postgres:
+    container_name: postgres_db
+    image: postgres:latest
+    restart: always
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres
+    ports:
+      - '5432:5432'
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
 
-    springboot:
-      build:
-        context: .
-        dockerfile: Dockerfile
-      restart: always
-      ports:
-        - '8080:8080'
-      depends_on:
-        - postgres
-      environment:
-        SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/postgres
-        SPRING_DATASOURCE_USERNAME: postgres
-        SPRING_DATASOURCE_PASSWORD: postgres
+  app:
+    container_name: app
+    build:
+      context: .
+      dockerfile: Dockerfile
+    restart: always
+    ports:
+      - '8080:8080'
+    depends_on:
+      - postgres
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/postgres
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: postgres
 
-  volumes:
-    postgres-data:
+volumes:
+  postgres-data:
