Added support for testcontainers along with a sample test

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
+	testImplementation 'org.testcontainers:junit-jupiter'
+	testImplementation 'org.testcontainers:postgresql'
+	testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '5.3.0'
 }
 
 tasks.named('test') {
