--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 services:
   postgres:
     container_name: postgres_db
-    image: postgres:latest
+    image: postgres:15.3
     restart: always
     environment:
       POSTGRES_USER: postgres
