--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,11 @@ services:
       dockerfile: Dockerfile
     restart: always
     ports:
-      - '8080:8080'
+      - '8080:8080' # For app
+      - '8000:8000' # For jobrunr dashboard
+    expose:
+      - 8080 # For app
+      - 8000 # For jobrunr dashboard
     depends_on:
       - postgres
     environment:
