--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.jobrunr:jobrunr-spring-boot-starter:5.3.3'
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.1.0'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '3.1.0'
+	implementation group: 'io.micrometer', name: 'micrometer-registry-prometheus', version: '1.11.1'
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
